small update of cv sent to bentley (should separate the biblio in journal/conference//posters)

--- a/doc/administrative_doc/CV/cv_scholar2017No.tex
+++ b/doc/administrative_doc/CV/cv_scholar2017No.tex
@@ -14,11 +14,7 @@
 
 \usepackage{fontspec}
 \usepackage{metalogo}
-%\usepackage{hyperref}
-%\hypersetup{
-%	colorlinks,
-%	urlcolor=color1
-%}
+\usepackage{hyperref}
 \setmainfont{Linux Libertine}
 % personal data
 \firstname{Simon}
@@ -90,12 +86,12 @@
 \vspace{.2cm}
 \subsection{Internship}
 \cventry{Sept. 2009--Jan. 2011}{Human Heuristic \& Autonomous Robot}{Supervisor: E. Zibetti (CHArt-Univ. P8)}{Paris, France}{}{Development of a Java API to control a Khepera III robot via bluetooth linked with autonomous controller build from Human Heuristics found after the analysis of real experiments. }
-\cventry{May 2009--Aug. 2009}{Controler for physiological experiments}{Supervisor: A. Green~(Dept. de Physio.-UdeM)}{Montréal, Canada}{}{Graphical interface and communication's tools to control and synchronize an experimental setup designed to make physiological experiments on the monkey.}
+\cventry{May 2009--Aug. 2009}{Controler for physiological experiments}{Supervisor: A. Green~(Dept. de Physio.-UdeM)}{Montréal, Canada}{}{Graphical interface and communication's tools to control and synchronize an experimental setup designed to make physiological studies on the monkey.}
 \cventry{May 2008--Aug. 2008}{Phylogenetic, Bacteries \& LGT }{Supervisor: V. Daubin~(LBBE-UCBL)}{Lyon, France}{}{C++ implementation of an algorithm used to adjust the species tree with the genetic tree including duplication and LGT.}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{.2cm}
 \subsection{Summer School \& Workshop}
-\cventry{June 2016}{Complex System Summer School}{}{Santa Fe, USA}{}{
+\cventry{June 2016}{Santa Fe Institute Complex System Summer School}{2016 SFI CSSS }{Santa Fe, USA}{}{
 Intensive 4 weeks series of lectures, labs, and discussion sessions focusing on foundational concepts, tools, and current topics in complexity science. Participants collaborate in developing novel research projects throughout the 4 weeks of the program that culminate in final presentations and papers. }
 
 \cventry{Feb 2016}{Data And Cities As Complex Adaptive Systems}{1st DACAS International Workshop}{Manchester, England}{}{Development of an innovative and cross-disciplinary set of tools to study cities as Complex Adaptive Systems by taking into account wide range of data sources and by integrating the interactions between 'hard' infrastructure with economic, ecological and social systems. Laureate of one of the bursary offered by the Manchester Metropolitan University.}
@@ -113,11 +109,11 @@ Intensive 4 weeks series of lectures, labs, and discussion sessions focusing on 
 \cvitemwithcomment{Spanish}{Intermediate}{Daily practice}
 
 \section{Computer skills}
-\cvitem{OS}{Linux (Ubuntu/Debian end \& admin user), Windows XP, Seven, Vista.}{}{}
+\cvitem{OS}{Linux (Ubuntu/Debian end \& admin user), Windows XP, Seven, Vista. Grid/Supercomputer usage.}{}{}
 \cvitem{Publishing}{\LaTeX / \LuaTeX,Open Office \& Microsoft Office Writers.}{}{}
 %%\cvitem{Databases}{Mysql,Oracle (SQL).}{}{}
-\cvitem{Programming}{C/C++, R, Java, Bash, Python/Perl,Php.}{}{}
-\cvitem{Statistical analysis/Visualing}{R (very good skills),Excel,Matlab.}{}{}
+\cvitem{Programming}{C/C++, R, Java, Bash, Python/Perl, Php.}{}{}
+\cvitem{Statistical analysis/Visualing}{R, Excel, Matlab.}{}{}
 
 %\section{Works}
 %\begin{itemize}
@@ -127,7 +123,7 @@ Intensive 4 weeks series of lectures, labs, and discussion sessions focusing on 
 %\end{itemize}
 
 \section{Interests}
-\cvitem{}{Among other things, I used to have a lot of associative activities. Mostly activities which go around music but also a bunch of works about sciences communication. I like reading, travel around the world and from time to time, dive into the Linux CLI.}
+\cvitem{}{Among other things, I used to have a lot of associative activities mostly revolving around music but also around sciences communication and popularization. I like reading, traveling around the world and dive into the Linux CLI.}
 
 
 
