--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -95,9 +95,27 @@
 @inproceedings{medernach2016evolution,
 	author = "Medernach, David and Carrignon, Simon and Doursat, Ren{\'e} and Kowaliw, Taras and Fitzgerald, Jeannie and Ryan, Conor",
 	booktitle = "{Proceedings of the Artificial Life Conference 2016}",
-	pages = "216-223",
+	pages = "216--223",
 	publisher = "MIT Press",
 	title = "{Evolution of heterogeneous cellular automata in fluctuating environments}",
 	year = "2016"
+}
+
+@inproceedings{bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization,
+	acmid = "3082551",
+	address = "New York, NY, USA",
+	author = "Bredeche, Nicolas and Montanier, Jean-Marc and Carrignon, Simon",
+	booktitle = "{Proceedings of the Genetic and Evolutionary Computation Conference Companion}",
+	doi = "10.1145/3067695.3082551",
+	isbn = "978-1-4503-4939-0",
+	keywords = "embodied evolution; evolutionary robotics; swarm robotics",
+	location = "Berlin, Germany",
+	numpages = "2",
+	pages = "1683--1684",
+	publisher = "ACM",
+	series = "{GECCO '17}",
+	title = "{Benefits of Proportionate Selection in Embodied Evolution: A Case Study with Behavioural Specialization}",
+	url = "http://doi.acm.org/10.1145/3067695.3082551",
+	year = "2017"
 }
 
