--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1946,21 +1946,32 @@
 	year = "2015"
 }
 
-
 @article{land5010005,
-    author = {Crabtree, Stefani A.},
-    title = {Simulating Littoral Trade: Modeling the Trade of Wine in the Bronze to Iron Age Transition in Southern France},
-    JOURNAL = {Land},
-    VOLUME 	= {5},
-    YEAR 	= {2016},
-    NUMBER = {1},
-    ARTICLE_NUMBER = {5},
-    URL = {http://www.mdpi.com/2073-445X/5/1/5},
-    ISSN = {2073-445X},
-    ABSTRACT = {The Languedoc-Roussillon region of southern France is well known today for producing full-bodied red wines. Yet wine grapes are not native to France. Additionally, wine was not developed indigenously first. In the 7th century B.C. Etruscan merchants bringing wine landed on the shores of the Languedoc and established trade relationships with the native Gauls, later creating local viticulture, and laying the foundation for a strong cultural identity of French wine production and setting in motion a multi-billion dollar industry. This paper examines the first five centuries of wine consumption (from ~600 B.C. to ~100 B.C.), analyzing how preference of one type of luxury good over another created distinctive artifact patterns in the archaeological record. I create a simple agent-based model to examine how the trade of comestibles for wine led to a growing economy and a distinctive patterning of artifacts in the archaeological record of southern France. This model helps shed light on the processes that led to centuries of peaceable relationships with colonial merchants, and interacts with scholarly debate on why Etruscan amphorae are replaced by Greek amphorae so swiftly and completely.},
-    DOI = {10.3390/land5010005}
+	abstract = "The Languedoc-Roussillon region of southern France is well known today for producing full-bodied red wines. Yet wine grapes are not native to France. Additionally, wine was not developed indigenously first. In the 7th century B.C. Etruscan merchants bringing wine landed on the shores of the Languedoc and established trade relationships with the native Gauls, later creating local viticulture, and laying the foundation for a strong cultural identity of French wine production and setting in motion a multi-billion dollar industry. This paper examines the first five centuries of wine consumption (from ~600 B.C. to ~100 B.C.), analyzing how preference of one type of luxury good over another created distinctive artifact patterns in the archaeological record. I create a simple agent-based model to examine how the trade of comestibles for wine led to a growing economy and a distinctive patterning of artifacts in the archaeological record of southern France. This model helps shed light on the processes that led to centuries of peaceable relationships with colonial merchants, and interacts with scholarly debate on why Etruscan amphorae are replaced by Greek amphorae so swiftly and completely.",
+	article_number = "5",
+	author = "Crabtree, Stefani A.",
+	doi = "10.3390/land5010005",
+	issn = "2073-445X",
+	journal = "Land",
+	number = "1",
+	title = "{Simulating Littoral Trade: Modeling the Trade of Wine in the Bronze to Iron Age Transition in Southern France}",
+	url = "http://www.mdpi.com/2073-445X/5/1/5",
+	volume = "5",
+	year = "2016"
 }
 
-
-
+@article{crema2016revealingpatternsofculturaltransmissionfromfrequencydataequilibriumandnonequilibriumassumptions,
+	author = "{Crema Enrico R.} and {Kandler Anne} and {Shennan Stephen}",
+	doi = "10.1038/srep39122",
+	journal = "Scientific Reports",
+	localfile = "../pdfs/crema2016revealingpatternsofculturaltransmissionfromfrequencydataequilibriumandnonequilibriumassumptions.pdf",
+	month = "dec",
+	pages = "39122",
+	publisher = "The Author(s)",
+	risfield_0_m3 = "Article",
+	title = "{Revealing patterns of cultural transmission from frequency data: equilibrium and non-equilibrium assumptions}",
+	url = "https://www.nature.com/articles/srep39122\#supplementary-information",
+	volume = "6",
+	year = "2016"
+}
 
