--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1975,3 +1975,61 @@
 	year = "2016"
 }
 
+@article{beaumont2009adaptiveapproximatebayesiancomputation,
+	author = "Beaumont, Mark A. and Cornuet, Jean-Marie and Marin, Jean-Michel and Robert, Christian P.",
+	doi = "10.1093/biomet/asp052",
+	eprint = "/oup/backfile/content\_public/journal/biomet/96/4/10.1093/biomet/asp052/2/asp052.pdf",
+	journal = "Biometrika",
+	localfile = "../pdfs/beaumont2009adaptiveapproximatebayesiancomputation.pdf",
+	number = "4",
+	pages = "983--990",
+	title = "{Adaptive approximate Bayesian computation}",
+	url = "http://dx.doi.org/10.1093/biomet/asp052",
+	volume = "96",
+	year = "2009"
+}
+
+@article{pritchard1999populationgrowthofhumanychromosomesastudyofychromosomemicrosatellites,
+	author = "Pritchard, J K and Seielstad, M T and Perez-Lezaun, A and Feldman, M W",
+	doi = "10.1093/oxfordjournals.molbev.a026091",
+	eprint = "/oup/backfile/content\_public/journal/mbe/16/12/10.1093\_oxfordjournals.molbev.a026091/2/mbe1791.pdf",
+	journal = "Molecular Biology and Evolution",
+	localfile = "../pdfs/pritchard1999populationgrowthofhumanychromosomesastudyofychromosomemicrosatellites.pdf",
+	number = "12",
+	pages = "1791--1798",
+	title = "{Population growth of human Y chromosomes: a study of Y chromosome microsatellites.}",
+	url = "http://dx.doi.org/10.1093/oxfordjournals.molbev.a026091",
+	volume = "16",
+	year = "1999"
+}
+
+@article{kandler2017generativeinferenceforculturalevolution,
+	abstract = "One of the major challenges in cultural evolution is to understand why and how various forms of social learning are used in human populations, both now and in the past. To date, much of the theoretical work on social learning has been done in isolation of data, and consequently many insights focus on revealing the learning processes or the distributions of cultural variants that are expected to have evolved in human populations. In population genetics, recent methodological advances have allowed a greater understanding of the explicit demographic and/or selection mechanisms that underlie observed allele frequency distributions across the globe, and their change through time. In particular, generative frameworks{\textemdash}often using coalescent-based simulation coupled with approximate Bayesian computation (ABC){\textemdash}have provided robust inferences on the human past, with no reliance on a priori assumptions of equilibrium. Here, we demonstrate the applicability and utility of generative inference approaches to the field of cultural evolution. The framework advocated here uses observed population-level frequency data directly to establish the likely presence or absence of particular hypothesized learning strategies. In this context, we discuss the problem of equifinality and argue that, in the light of sparse cultural data and the multiplicity of possible social learning processes, the exclusion of those processes inconsistent with the observed data might be the most instructive outcome. Finally, we summarize the findings of generative inference approaches applied to a number of case studies.This article is part of the theme issue {\textquoteleft}Bridging cultural gaps: interdisciplinary studies in human cultural evolution{\textquoteright}.",
+	author = "Kandler, Anne and Powell, Adam",
+	doi = "10.1098/rstb.2017.0056",
+	eprint = "http://rstb.royalsocietypublishing.org/content/373/1743/20170056.full.pdf",
+	issn = "0962-8436",
+	journal = "Philosophical Transactions of the Royal Society of London B: Biological Sciences",
+	localfile = "../pdfs/kandler2017generativeinferenceforculturalevolution.pdf",
+	number = "1743",
+	publisher = "The Royal Society",
+	title = "{Generative inference for cultural evolution}",
+	url = "http://rstb.royalsocietypublishing.org/content/373/1743/20170056",
+	volume = "373",
+	year = "2018"
+}
+
+@article{perreault2018timeaveragingslowsdownratesofchangeinthearchaeologicalrecord,
+	abstract = "Measuring the pace of cultural change, and understanding its determinants is a fundamental goal of anthropological research. The archaeological record is the main source of information about the pace of cultural change, but it is an imperfect one, as taphonomic loss and mixing distort rate measurements. Here, I focus on the impact of time-averaging on rate measurements. Time-averaging arises when archaeological materials associated with activities and events that took place at different points in time are mixed into the same unit, whether because of depositional processes, disturbance factors, or because archaeologists lump together archaeological contexts when creating analytical units. I use analytical models to show how time-averaging can slow down the observed rates of change under two general modes of cultural change: random drift and directional change. I test this prediction using empirical rates of change from the archaeological record of North America. I show that empirical rates of change are indeed inversely correlated with the duration of time-averaging and provide a range estimate for this correlation.",
+	author = "Perreault, Charles",
+	day = "29",
+	doi = "10.1007/s10816-018-9364-4",
+	issn = "1573-7764",
+	journal = "Journal of Archaeological Method and Theory",
+	localfile = "../pdfs/perreault2018timeaveragingslowsdownratesofchangeinthearchaeologicalrecord.pdf",
+	month = "Jan",
+	title = "{Time-Averaging Slows Down Rates of Change in the Archaeological Record}",
+	url = "https://doi.org/10.1007/s10816-018-9364-4",
+	year = "2018"
+}
+
