change cv email

--- a/doc/administrative_doc/CV/cv_scholar2017No.tex
+++ b/doc/administrative_doc/CV/cv_scholar2017No.tex
@@ -24,7 +24,7 @@
 %\mobile{+1~(234)~567~890}                     % optional, remove the line if not wanted
 %\phone{+2~(345)~678~901}                      % optional, remove the line if not wanted
 %\fax{+3~(456)~789~012}                        % optional, remove the line if not wanted
-\email{simon.carrignon@gmail.com}                          % optional, remove the line if not wanted
+\email{simon.carrignon@bsc.es}                          % optional, remove the line if not wanted
 %\homepage{www.johndoe.com}                    % optional, remove the line if not wanted
 %\extrainfo{additional information}            % optional, remove the line if not wanted
 %\photo[64pt][0.4pt]{picture}                  % '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file; optional, remove the line if not wanted
@@ -70,7 +70,7 @@
 }
 %I built up the experimental setup, run all experiment on a national grid (www.grid5000.fr) and collect and analysed the data.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Experience}
+\section{Experience \Huge}
 \subsection{Professional}
 \cventry{Jan. 2010--Mar. 2012}{Research engineer }{LUTIN-Université Paris 8}{Paris, France}{}{1 week to 3 months short contracts during which I help researchers in data processing \& statistical analysis and that allow me to develop or complete:
 \begin{itemize}
