add some reference to short bio

--- a/doc/administrative_doc/short.tex
+++ b/doc/administrative_doc/short.tex
@@ -41,9 +41,11 @@ I am a PhD student in Computer Applications in Science and Engineering at the Ba
 \subsubsection*{Peer-reviewed Proceedings of Conferences:}
 
 \begin{itemize}
+    \item  \bibentry{gaudiello2010representations}  
     \item  \bibentry{medernach2015evolutionary}  
     \item  \bibentry{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}
     \item  \bibentry{medernach2016evolution}  
+    \item  \bibentry{bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}  
 \end{itemize}
 
 
