--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -2033,3 +2033,34 @@
 	year = "2018"
 }
 
+@article{kendal2018sociallearningstrategiesbridgebuildingbetweenfields,
+	author = "L., Kendal Rachel and J., Boogert Neeltje and Luke, Rendell and N., Laland Kevin and Mike, Webster and L., Jones Patricia",
+	doi = "10.1016/j.tics.2018.04.003",
+	issn = "1364-6613",
+	journal = "Trends in Cognitive Sciences",
+	localfile = "../pdfs/kendal2018sociallearningstrategiesbridgebuildingbetweenfields.pdf",
+	month = "may",
+	note = "doi: 10.1016/j.tics.2018.04.003",
+	publisher = "Elsevier",
+	risfield_0_do = "10.1016/j.tics.2018.04.003",
+	risfield_1_t2 = "Trends in Cognitive Sciences",
+	risfield_2_m3 = "doi: 10.1016/j.tics.2018.04.003",
+	title = "{Social Learning Strategies: Bridge-Building between Fields}",
+	year = "2018"
+}
+
+@article{kandler2017inferringindividuallevelprocessesfrompopulationlevelpatternsinculturalevolution,
+	abstract = "Our species is characterized by a great degree of cultural variation, both within and between populations. Understanding how group-level patterns of culture emerge from individual-level behaviour is a long-standing question in the biological and social sciences. We develop a simulation model capturing demographic and cultural dynamics relevant to human cultural evolution, focusing on the interface between population-level patterns and individual-level processes. The model tracks the distribution of variants of cultural traits across individuals in a population over time, conditioned on different pathways for the transmission of information between individuals. From these data, we obtain theoretical expectations for a range of statistics commonly used to capture population-level characteristics (e.g. the degree of cultural diversity). Consistent with previous theoretical work, our results show that the patterns observed at the level of groups are rooted in the interplay between the transmission pathways and the age structure of the population. We also explore whether, and under what conditions, the different pathways can be distinguished based on their group-level signatures, in an effort to establish theoretical limits to inference. Our results show that the temporal dynamic of cultural change over time retains a stronger signature than the cultural composition of the population at a specific point in time. Overall, the results suggest a shift in focus from identifying the one individual-level process that likely produced the observed data to excluding those that likely did not. We conclude by discussing the implications for empirical studies of human cultural evolution.",
+	author = "Kandler, Anne and Wilder, Bryan and Fortunato, Laura",
+	doi = "10.1098/rsos.170949",
+	eprint = "http://rsos.royalsocietypublishing.org/content/4/9/170949.full.pdf",
+	journal = "Royal Society Open Science",
+	localfile = "../pdfs/kandler2017inferringindividuallevelprocessesfrompopulationlevelpatternsinculturalevolution.pdf",
+	number = "9",
+	publisher = "The Royal Society",
+	title = "{Inferring individual-level processes from population-level patterns in cultural evolution}",
+	url = "http://rsos.royalsocietypublishing.org/content/4/9/170949",
+	volume = "4",
+	year = "2017"
+}
+
