--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -2003,6 +2003,21 @@
 	year = "1999"
 }
 
+@Inbook{kandler2015inferringlearningstrategiesfromculturalfrequencydata,
+    author={Kandler, Anne and Powell, Adam},
+    editor={Mesoudi, Alex and Aoki, Kenichi},
+    title={Inferring Learning Strategies from Cultural Frequency Data},
+    bookTitle={Learning Strategies and Cultural Evolution during the Palaeolithic},
+    year={2015},
+    publisher={Springer Japan},
+    address={Tokyo},
+    pages={85--101},
+    abstract={Social learning has been identified as one of the fundamentals of culture and therefore the understanding of why and how individuals use social information presents one of the big questions in cultural evolution. To date much of the theoretical work on social learning has been done in isolation of data. Evolutionary models often provide important insight into which social learning strategies are expected to have evolved but cannot tell us which strategies human populations actually use. In this chapter we explore how much information about the underlying learning strategies can be extracted by analysing the temporal occurrence or usage patterns of different cultural variants in a population. We review the previous methodology that has attempted to infer the underlying social learning processes from such data, showing that they may apply statistical methods with insufficient power to draw reliable inferences. We then introduce a generative inference framework that allows robust inferences on the social learning processes that underlie cultural frequency data. Using developments in population genetics---in the form of generative simulation modelling and approximate Bayesian computation---as our model, we demonstrate the strength of this method with an example based on simulated data.},
+    isbn={978-4-431-55363-2},
+    doi={10.1007/978-4-431-55363-2_7},
+    url={https://doi.org/10.1007/978-4-431-55363-2_7}
+}
+
 @article{kandler2017generativeinferenceforculturalevolution,
 	abstract = "One of the major challenges in cultural evolution is to understand why and how various forms of social learning are used in human populations, both now and in the past. To date, much of the theoretical work on social learning has been done in isolation of data, and consequently many insights focus on revealing the learning processes or the distributions of cultural variants that are expected to have evolved in human populations. In population genetics, recent methodological advances have allowed a greater understanding of the explicit demographic and/or selection mechanisms that underlie observed allele frequency distributions across the globe, and their change through time. In particular, generative frameworks{\textemdash}often using coalescent-based simulation coupled with approximate Bayesian computation (ABC){\textemdash}have provided robust inferences on the human past, with no reliance on a priori assumptions of equilibrium. Here, we demonstrate the applicability and utility of generative inference approaches to the field of cultural evolution. The framework advocated here uses observed population-level frequency data directly to establish the likely presence or absence of particular hypothesized learning strategies. In this context, we discuss the problem of equifinality and argue that, in the light of sparse cultural data and the multiplicity of possible social learning processes, the exclusion of those processes inconsistent with the observed data might be the most instructive outcome. Finally, we summarize the findings of generative inference approaches applied to a number of case studies.This article is part of the theme issue {\textquoteleft}Bridging cultural gaps: interdisciplinary studies in human cultural evolution{\textquoteright}.",
 	author = "Kandler, Anne and Powell, Adam",
